--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		
 <body>
 <section class="main">
-	 <img src="image.PNG" width="30%">
+	 <img src="image.png" width="30%">
 	 <div>
 	 	 <div class="insta-user-details">
 		 	<h1 class="insta">Instagram</h1>
@@ -93,7 +93,7 @@
 		 </div>
 		 <div class="playstore">
 		 	<p>Get the app.</p>
-            <img src="applestore.PNG">
+            <img src="applestore.png">
 		 </div>
 	 </div>
 </section>
